renamed and moved test